# qt-monitoring-sensors-system

./: .gitignore  CMakeLists.txt  README.md
include/: detector.h  detector_data_generator.h  detector_data_model.h  detector_generator.h  detector_model.h  detector_table_model.h  main_window.h
include/proxy_model/: detectors_proxy_model.h  normal_sort_proxy_model.h
src/: detector.cpp  detector_data_generator.cpp  detector_data_model.cpp  detector_generator.cpp  detector_model.cpp  detector_table_model.cpp  main.cpp  main_window.cpp
